--- a/Deposito/src/app/pages/compartido/login/login.component.html
+++ b/Deposito/src/app/pages/compartido/login/login.component.html
@@ -22,17 +22,9 @@
     <div class="container login-container">
         <div class="row">
             <div class="col-md-6 ads">
-                <div class="row">
-                    <div id="laureles" class="col-md-6">
-                        <img src="assets/img/laureles1.png" alt="profile_img" height="170px" width="170px">
-                    </div>
-                    <div id="laureles" class="col-md-6">
-                        <img src="assets/img/laureles2.png" alt="profile_img" height="170px" width="170px">
-                    </div>
-                </div>
-                <h1><span id="fl">Policía</span>&nbsp;<span id="fl">Chaco</span></h1>
-                <p>DPTO. COMUNICACIONES E INFORMATICA </p>
-                <img src="assets/img/logopol.png" alt="profile_img" height="150px" width="150px;">
+                <h1><span id="fl">Policía </span><span id="sl">Chaco</span></h1>
+                <p>DIVISION DESARROLLO DE SISTEMAS</p>
+                <img src="assets/img/logopol.png" alt="profile_img" height="140px" width="140px;">
                 <br>
             </div>
             <div class="col-md-6 login-form">
@@ -71,6 +63,5 @@
                 </form>
             </div>
         </div>
-        
     </div>
 </ng-template>
