--- a/Deposito/src/app/pages/compartido/nav/nav.component.html
+++ b/Deposito/src/app/pages/compartido/nav/nav.component.html
@@ -7,7 +7,7 @@
     class="btn btn-outline-dark navbar-brand"
     id="log"
     [routerLink]="['/principal']"
-    >Taller Web</a
+    >Depósito Web</a
   >
   <button
     class="navbar-toggler d-lg-none"
