--- a/Deposito/src/app/pages/compartido/login/login.component.scss
+++ b/Deposito/src/app/pages/compartido/login/login.component.scss
@@ -14,6 +14,8 @@
     color: #fff;
     padding: 15px;
     text-align: center;
+
+
   }
   
   .ads h1 {
@@ -21,7 +23,7 @@
   }
   
   #fl {
-    font-weight: 100 !important;;
+    font-weight: 600;
     color: black !important;
   }
   
@@ -64,6 +66,6 @@
     color: black;
   }
   h1{
-    font-size: 50px !important;
+    font-size: 4rem !important;
   }
   
