--- a/Deposito/src/app/pages/lst/lst-equipo/lst-equipo.component.html
+++ b/Deposito/src/app/pages/lst/lst-equipo/lst-equipo.component.html
@@ -44,10 +44,10 @@
                                 <i class="fas fa-edit"></i>
                             </button>
                             &nbsp;
-                            <button type="button" title="Eliminar" placement="top" show-delay="10"
+                            <!-- <button type="button" title="Eliminar" placement="top" show-delay="10"
                                 (click)="preDelete(item)" class="btn btn-danger btn-sm">
                                 <i class="fas fa-trash"></i>
-                            </button>
+                            </button> -->
                         </td>
                     </tr>
                 </tbody>
