--- a/Deposito/src/app/pages/lst/lst-proveedor/lst-proveedor.component.html
+++ b/Deposito/src/app/pages/lst/lst-proveedor/lst-proveedor.component.html
@@ -34,7 +34,7 @@
                         <td>{{ item.cuit }}</td>
                         <td>{{ item.direccion }}</td>
                         <td>{{ item.telefono }}</td>
-                        <td>{{ item.Celular }}</td>
+                        <td>{{ item.celular }}</td>
                         
                         <td>
                             <button type="button" title="Modificar" placement="top" show-delay="10"
@@ -42,10 +42,10 @@
                                 <i class="fas fa-edit"></i>
                             </button>
                             &nbsp;
-                            <button type="button" title="Eliminar" placement="top" show-delay="10"
+                            <!-- <button type="button" title="Eliminar" placement="top" show-delay="10"
                                 (click)="preDelete(item)" class="btn btn-danger btn-sm">
                                 <i class="fas fa-trash"></i>
-                            </button>
+                            </button> -->
                         </td>
                     </tr>
                 </tbody>
