--- a/Deposito/src/app/pages/frm-abm/abm-marca/abm-marca.component.html
+++ b/Deposito/src/app/pages/frm-abm/abm-marca/abm-marca.component.html
@@ -4,8 +4,8 @@
       <form #f="ngForm" (ngSubmit)="doAction(f)" ngNativeValidate class="was-validated">
         <hr>  
         <div class="form-group">
-              <label for="title">Nombre</label>
-              <input type="text" class="form-control" id="nombre" name="nombre" placeholder="ingrese nombre"
+              <label for="title">Nombre de la marca</label>
+              <input type="text" class="form-control" id="nombre" name="nombre" placeholder="ingrese nombre de la marca"
                   [(ngModel)]="item.nombre" required />
           </div>
           <hr>
