--- a/Deposito/src/app/pages/frm-abm/abm-modelo/abm-modelo.component.html
+++ b/Deposito/src/app/pages/frm-abm/abm-modelo/abm-modelo.component.html
@@ -4,8 +4,8 @@
       <hr>
       <form #f="ngForm" (ngSubmit)="doAction(f)" ngNativeValidate class="was-validated">
           <div class="form-group">
-              <label for="title">Nombre</label>
-              <input type="text" class="form-control" id="nombre" name="nombre" placeholder="ingrese nombre"
+              <label for="title">Nombre del modelo</label>
+              <input type="text" class="form-control" id="nombre" name="nombre" placeholder="ingrese nombre del modelo"
                   [(ngModel)]="item.nombre" required />
           </div>
           <div class="form-group">
