--- a/Deposito/src/app/pages/lst/lst-estado-equipo/lst-estado-equipo.component.html
+++ b/Deposito/src/app/pages/lst/lst-estado-equipo/lst-estado-equipo.component.html
@@ -1,7 +1,7 @@
 <div class="card border-info">
     <div class="card-body">
         <div class="card-header">
-            Listado de {{ entity }}
+            <b> Listado de {{ entity }} </b>
             &nbsp;
             <!--             show-delay="10" data-toggle="modal" data-target="#modelId"
   -->
@@ -14,7 +14,7 @@
         </app-fil-estado-equipo>
   
         <div class="row table-responsive">
-            <table class="table table-striped table-inverse">
+            <table class="table table-striped table-inverse text-center">
                 <thead class="thead-inverse">
                     <tr>
                         <!-- <th>id</th> -->
