--- a/Deposito/src/app/pages/lst/lst-equipo/lst-equipo.component.html
+++ b/Deposito/src/app/pages/lst/lst-equipo/lst-equipo.component.html
@@ -1,10 +1,13 @@
+<div class="overlay" *ngIf="load">
+    <app-wg-cargando></app-wg-cargando>
+  </div>
+  <div >
+    <div *ngIf="!load">
 <div class="card border-info">
     <div class="card-body">
         <div class="card-header">
             <b> Listado de {{ entity }} </b>
             &nbsp;
-            <!--             show-delay="10" data-toggle="modal" data-target="#modelId"
-  -->
             <a title="Agregar Nuevo" placement="right" (click)="linkear(0)" class="btn btn-primary btn-redondo">
                 <i class="fa fa-plus" aria-hidden="true"></i>
             </a>
@@ -14,7 +17,7 @@
         </app-fil-equipo>
   
         <div class="row table-responsive">
-            <table class="table table-striped table-inverse text-center">
+            <table *ngIf="items.length > 0" class="table table-striped table-inverse text-center">
                 <thead class="thead-inverse">
                     <tr>
                         <!-- <th>id</th> -->
@@ -53,6 +56,22 @@
                 </tbody>
             </table>
         </div>
+        <div
+      *ngIf="items.length === 0"
+      class="alert alert-primary alert-dismissible fade show"
+      role="alert"
+    >
+      <button
+        type="button"
+        class="close"
+        data-dismiss="alert"
+        aria-label="Close"
+      >
+        <span aria-hidden="true">&times;</span>
+        <span class="sr-only">Salir</span>
+      </button>
+      <strong>No hay datos</strong>
+    </div>
     </div>
   </div>
   
@@ -73,3 +92,4 @@
         </div>
     </div>
   </div>
+</div>
