--- a/Deposito/src/app/pages/componentes/combo-modelo-equipo/combo-modelo-equipo.component.html
+++ b/Deposito/src/app/pages/componentes/combo-modelo-equipo/combo-modelo-equipo.component.html
@@ -1,7 +1,7 @@
 <div class="col-lg-12">
   <div class="control-group">
     <div class="form-group controls">
-      <label>Seleccione modelo</label>
+      <label>Seleccione marca - modelo</label>
       <select
         (ngModelChange)="capturar($event)"
         name="modelo"
@@ -12,7 +12,7 @@
         required
       >
         <option *ngFor="let item of items" [ngValue]="item">
-          {{ item.nombre }} - Marca: {{item.marca.nombre}}
+          [ {{item.marca.nombre}} ] {{ item.nombre }}
         </option>
       </select>
     </div>
