modificar entrega equipo

--- a/Deposito/src/app/pages/filtros/fil-persona/fil-persona.component.html
+++ b/Deposito/src/app/pages/filtros/fil-persona/fil-persona.component.html
@@ -32,4 +32,9 @@
       {{ item.persona?.apellido }} - {{ item.jerarquia?.nombre }}
     </option>
   </select>
+
+
+  <label for="">
+    {{nombre}}
+  </label>
 </ng-container>
