--- a/Deposito/src/app/pages/filtros/fil-persona/fil-persona.component.html
+++ b/Deposito/src/app/pages/filtros/fil-persona/fil-persona.component.html
@@ -25,7 +25,6 @@
     [(ngModel)]="item"
     [compareWith]="compareFnPer"
     class="form-control form-sm"
-    required
   >
     <option *ngFor="let item of items" [ngValue]="item">
       {{ item.persona?.norDni }} - {{ item.persona?.nombre }} -
@@ -33,8 +32,7 @@
     </option>
   </select>
 
-
-  <label for="">
+  <!-- <label for="">
     {{nombre}}
-  </label>
+  </label> -->
 </ng-container>
