--- a/Deposito/src/app/pages/lst/lst-entrega-equipo-unidad/lst-entrega-equipo-unidad.component.scss
+++ b/Deposito/src/app/pages/lst/lst-entrega-equipo-unidad/lst-entrega-equipo-unidad.component.scss
@@ -7,3 +7,10 @@ background-color: #E8FFFF !important;
 b{
     font-size: 30px;
 }
+span{
+    color: red !important;
+    font-size: 30px;
+}
+.modal-title{
+    color: blue !important;
+}
