--- a/Deposito/src/app/pages/compartido/sidebar/_variables.scss
+++ b/Deposito/src/app/pages/compartido/sidebar/_variables.scss
@@ -9,7 +9,7 @@ $border-thin:                1px !default;
 $border-thick:               2px !default;
 //$white-color:                #000000 !default;
 $white-color:                #FFFFFF !default;
-$white-activo:                #B8B5FF !default;
+$white-activo:                #dad9fa !default;
 $white-bg:                   #FFFFFF !default;
 $orange-bg:                  #e95e38 !default;
 
