--- a/Deposito/src/app/pages/lst/lst-entrega-equipo-unidad/lst-entrega-equipo-unidad.component.html
+++ b/Deposito/src/app/pages/lst/lst-entrega-equipo-unidad/lst-entrega-equipo-unidad.component.html
@@ -110,7 +110,7 @@
       <div class="modal-dialog" role="document">
         <div class="modal-content">
           <div class="modal-header">
-            <h5 class="modal-title">Equipo asignado a vehículo:</h5>
+            <h5 class="modal-title">VHF BASE/MOVIL:</h5>
             <button
               #close
               type="button"
@@ -122,9 +122,13 @@
             </button>
           </div>
           <div class="modal-body">
-          
-            {{vehiculo.identificacionPol}}
-
+          <label for=""> <b>Id Policial:</b>&nbsp;<span>{{vehiculo.identificacionPol | uppercase}}</span></label>
+          <br>
+          <label for=""> <b>Dominio:</b>&nbsp; <span>{{vehiculo.dominio | uppercase}}</span></label>
+          <br>
+          <label for=""> <b>Marca:</b>&nbsp;<span>{{vehiculo.modelo.marca.nombre | uppercase}}</span></label>
+          <br>
+          <label for=""> <b>Modelo:</b>&nbsp;<span>{{vehiculo.modelo.nombre | uppercase}}</span></label>
           </div>
         </div>
       </div>
