--- a/Deposito/src/app/pages/lst/lst-entrega-equipo-unidad/lst-entrega-equipo-unidad.component.html
+++ b/Deposito/src/app/pages/lst/lst-entrega-equipo-unidad/lst-entrega-equipo-unidad.component.html
@@ -28,14 +28,14 @@
             *ngIf="items.length > 0"
             class="table table-striped table-inverse text-center"
           >
-            <thead class="thead-inverse">
+            <thead class="table-light">
               <tr>
                 <!-- <th>id</th> -->
                 <th>Marca</th>
                 <th>Modelo</th>
                 <th>Nro.serie|Id.Pol</th>
                 <th>Tipo Equipo</th>
-                <th>Unidad</th>
+                <th>Unidad Entregada</th>
                 <th>Fecha Entrega</th>
                 <th>Acción</th>
               </tr>
@@ -57,7 +57,7 @@
                     placement="top"
                     show-delay="10"
                     (click)="linkear(item.id)"
-                    class="btn btn-secondary btn-sm"
+                    class="btn btn-warning btn-sm"
                   >
                     <i class="fas fa-edit"></i>
                   </button>
@@ -73,6 +73,18 @@
                     data-target="#modelId"
                   >
                     <i class="fas fa-car"></i>
+                  </button>
+                  <button
+                    type="button"
+                    title="Ver Historial del equipo"
+                    placement="top"
+                    show-delay="10"
+                    (click)="linkear(item.id)"
+                    class="btn btn-primary btn-sm"
+                    data-toggle="modal"
+                    data-target="#modelId"
+                  >
+                    <i class="fa fa-history"></i>
                   </button>
                 </td>
               </tr>
