--- a/Deposito/src/app/pages/lst/lst-equipo/lst-equipo.component.html
+++ b/Deposito/src/app/pages/lst/lst-equipo/lst-equipo.component.html
@@ -18,7 +18,7 @@
   
         <div class="row table-responsive">
             <table *ngIf="items.length > 0" class="table table-striped table-inverse text-center">
-                <thead class="thead-inverse">
+                <thead class="table-light">
                     <tr>
                         <!-- <th>id</th> -->
                         <th>Tipo Equipo</th>
@@ -32,7 +32,7 @@
                     </tr>
                 </thead>
                 <tbody>
-                    <tr *ngFor="let item of items">
+                    <tr class="{{item.situacion != 'Asignado'? 'table-success':'sin-color' }}" *ngFor="let item of items">
                         <!-- <td scope="row">{{item.id}} </td> -->
                         <td>{{ item.tipoEquipo.nombre}}</td>
                         <td>{{ item.nroSerie }}</td>
