--- a/Deposito/src/app/pages/lst/lst-modelo/lst-modelo.component.html
+++ b/Deposito/src/app/pages/lst/lst-modelo/lst-modelo.component.html
@@ -15,7 +15,7 @@
   
         <div class="row table-responsive">
             <table *ngIf="items.length > 0" class="table table-striped table-inverse text-center">
-                <thead class="thead-inverse">
+                <thead class="table-light">
                     <tr>
                         <!-- <th>id</th> -->
                         <th>Nombre</th>
