seguir con la impresion

--- a/Deposito/src/app/pages/compartido/sidebar/sidebar.component.html
+++ b/Deposito/src/app/pages/compartido/sidebar/sidebar.component.html
@@ -1,4 +1,4 @@
-<div class="wrapper">
+<div class="wrapper d-print-none no-display">
   <div class="sidebar" data-color="red">
     <div class="logo">
       <a class="simple-text logo-mini">
