--- a/Deposito/src/app/pages/lst/lst-entrega-equipo-unidad/lst-entrega-equipo-unidad.component.html
+++ b/Deposito/src/app/pages/lst/lst-entrega-equipo-unidad/lst-entrega-equipo-unidad.component.html
@@ -86,6 +86,16 @@
                   >
                     <i class="fa fa-history"></i>
                   </button>
+                  <button
+                    type="button"
+                    title="Reporte Impresión"
+                    placement="top"
+                    show-delay="10"
+                    (click)="linkearReporte(item.id)"
+                    class="btn btn-info btn-sm"
+                  >
+                    <i class="fa fa-print"></i>
+                  </button>
                 </td>
               </tr>
             </tbody>
