--- a/Deposito/src/app/pages/frm-abm/abm-equipo/abm-equipo.component.html
+++ b/Deposito/src/app/pages/frm-abm/abm-equipo/abm-equipo.component.html
@@ -115,7 +115,7 @@
         </div>
         <div class="row">
           <!-- situacion -->
-          <div class="form-group col-md-6">
+          <!-- <div class="form-group col-md-6">
             <label for="title">Situación</label>
             <select
               class="form-control"
@@ -127,12 +127,13 @@
               id="situacion"
               required
             >
-              <!-- <option selected>Seleccione una opción</option> -->
+             
               <option value="A asignar">A ASIGNAR</option>
               <option value="Reasignar">REASIGNAR</option>
               <option value="Asignado">ASIGNADO</option>
             </select>
-          </div>
+          </div> -->
+          
           <!-- tipo equipo -->
           <div class="form-group col-lg-6">
             <app-combo-tipo-equipo
