--- a/Deposito/src/app/pages/componentes/reportes/reportes.component.html
+++ b/Deposito/src/app/pages/componentes/reportes/reportes.component.html
@@ -2,8 +2,7 @@
 <form  class="form" #f="ngForm" ngNativeValidate *ngIf="item">
     <!-- .row>.col-md-4*3-->
     <!-- membrete -->
-    <h3>ORIGINAL</h3>
-    <div class="row text-center">
+    <div id="membrete" class="row text-center">
         <div class="col-md-4">
             <img height="80px" width="auto" src="assets/img/logopol.png" alt="">
             <br>
@@ -27,14 +26,13 @@
     </div>
 <div class="row">
     <div class="col-md-12 text-center">
-        <br>
-        <b>********************************************************************************************************************************</b>
+        <b>*********************************************************************************************************************************************************</b>
     </div>
 </div>
 <div id="padding" class="row">
     <div class="col-md-12 text-center">
        <h4><u>{{item.unidad.nombre | uppercase}}</u></h4>
-       <h4><u>RECIBO</u></h4>
+       <h4><u>RECIBO "{{item.equipo.tipoEquipo.nombre | uppercase}}"</u></h4>
        <hr>
     </div>
 </div>
@@ -58,14 +56,14 @@
             </thead>
             <tbody>
                 <tr>
-                    <td scope="row">{{item.equipo.modelo.marca.nombre | uppercase}}</td>
-                    <td>{{item.equipo.modelo.nombre |uppercase}}</td>
-                    <td>{{item.equipo.nroSerie |uppercase}}</td>
+                    <td scope="row"><b>{{item.equipo.modelo.marca.nombre | uppercase}}</b></td>
+                    <td><b>{{item.equipo.modelo.nombre |uppercase}}</b></td>
+                    <td><b>{{item.equipo.nroSerie |uppercase}}</b></td>
                 </tr>
             </tbody>
         </table>
-        <div class="form-group">
-          <textarea [(ngModel)]="aclaracion" class="form-control" name="" id="" rows="3" cols="115"></textarea>
+        <div class="form-group col-md-12">
+          <textarea [(ngModel)]="aclaracion" class="form-control formulario" name="" id="" rows="3" cols="115"></textarea>
         </div>
     </div>
 
@@ -73,12 +71,12 @@
     <!-- observaciones -->
     <div class="row">
         <div class="col-md-12 text-justify">
-            <h5><b>OBSERVACIONES:</b><span> El equipo antes mencionado,{{v|uppercase}}, el mismo se encuentra <b>{{item.equipo.estado.nombre|uppercase}}</b>, funciona correctamente, y se entrega a la unidad de mención en el encabezado en carácter de <b>{{devolver(item.tipoEntrega) | uppercase}}</b>. </span></h5>
+            <h5><b>OBSERVACIONES:</b><span> El equipo antes mencionado,{{v|uppercase}} se encuentra en estado <b>{{item.equipo.estado.nombre|uppercase}}</b>, funciona correctamente, y se entrega a la unidad de mención en el encabezado en carácter de <b>{{devolver(item.tipoEntrega) | uppercase}}</b>. </span></h5>
         </div>
     </div>
     <div class="row">
         <div class="col-md-6"></div>
-        <div class="col-md-6">
+        <div class="col-md-6 text-right">
             <h5> <b> Resistencia, {{item.fechaEntrega | date:'dd/MM/yyyy'}}</b></h5>
         </div>
     </div>
@@ -86,25 +84,30 @@
     <!-- .row>.col-md-6*2-->
     <!-- firma de los empleados -->
     <br>
+    <br>
+    <br>
+    <br>
     <div class="row">
-        <div class="col-md-5">
+        <div class="col-md-4">
             <div class="row">
-                <div class="col-md-12">FIRMA: ____________________________________</div>
-                <div class="col-md-12">ACLARACION: {{item.recibe.apellido}},{{item.recibe.nombre}}</div>
-                <div class="col-md-12">DNI: {{item.recibe.norDni}}</div>
-                <div class="col-md-12">JERARQUIA: ____________________________________</div>
+                <div class="col-md-12 b"><b>FIRMA:</b> ____________________________________</div>
+                <div class="col-md-12 b"><b>ACLARACION:</b> {{item.recibe.apellido}}, {{item.recibe.nombre}}</div>
+                <div class="col-md-12 b"><b>DNI:</b> {{item.recibe.norDni}}</div>
+                <div class="col-md-12 b"><b>JERARQUIA:</b>_______________<b>Pza.</b>_____</div>
                 <div class="col-md-12 text-center"> <b>-RECIBI CONFORME-</b></div>
             </div>
         </div>
+        <div class="col md-1"></div>
         <div class="col-md-2">
             <img class="sello" src="assets/img/sellounidadcom.png" alt="">
         </div>
-        <div class="col-md-5">
+        <div class="col md-1"></div>
+        <div class="col-md-4">
             <div class="row">
-                <div class="col-md-12">FIRMA: ____________________________________</div>
-                <div class="col-md-12">ACLARACION: {{item.entrega.apellido}},{{item.entrega.nombre}}</div>
-                <div class="col-md-12">DNI: {{item.entrega.norDni}}</div>
-                <div class="col-md-12">JERARQUIA: ____________________________________</div>
+                <div class="col-md-12 b"><b>FIRMA:</b>____________________________________</div>
+                <div class="col-md-12 b"><b>ACLARACION:</b> {{item.entrega.apellido}}, {{item.entrega.nombre}}</div>
+                <div class="col-md-12 b"><b>DNI:</b> {{item.entrega.norDni}}</div>
+                <div class="col-md-12 b"><b>JERARQUIA:</b>_______________<b>Pza.</b>_____</div>
                 <div class="col-md-12 text-center"> <b>-ENTREGUE CONFORME-</b></div>
             </div>
         </div>
@@ -114,24 +117,19 @@
     <br>
     <br>
 
-    <div class="row text-center">
+    <div class="row text-center d-print-none">
         <div class="col-md-12">
             <i class="fas fa-cut  fa-2x  "></i>
-            ----------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------
+           <b>------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------</b>
         </div>
     </div>
-
-    <br>
-    <br>
-    <!-- .row>.col-md-4*3-->
-    <!-- membrete -->
 
     
 
     <div class="col-md-12">
         <button (click)="imprimir()" class="d-print-none btn btn-primary">imprimir</button>
     </div>
-
+<br>
 
 </form>
 </div>
