--- a/Deposito/src/app/pages/componentes/reportes/reportes.component.scss
+++ b/Deposito/src/app/pages/componentes/reportes/reportes.component.scss
@@ -202,8 +202,21 @@
   margin-left:16px;
 }
 .sello{
-  margin-top: -75px;
+  margin-top: -120px;
   //margin-left: -3rem;
-  width: 7rem;
+  width: 10rem;
   height: auto;
+}
+b{
+  color: #000 !important;
+}
+.b{
+  color: #000 !important;
+}
+.formulario{
+  font-weight: bold;
+  font-size: 16px;
+  }
+#membrete{
+  padding-top: 0%;
 }
