--- a/Deposito/src/app/pages/lst/lst-entrega-equipo-unidad/lst-entrega-equipo-unidad.component.html
+++ b/Deposito/src/app/pages/lst/lst-entrega-equipo-unidad/lst-entrega-equipo-unidad.component.html
@@ -51,51 +51,65 @@
                 <td>{{ item.unidad.nombre }}</td>
                 <td>{{ item.fechaEntrega | date: "dd/MM/yyyy" }}</td>
                 <td>
-                  <button
-                    type="button"
-                    title="Modificar"
-                    placement="top"
-                    show-delay="10"
-                    (click)="linkear(item.id)"
-                    class="btn btn-warning btn-sm"
-                  >
-                    <i class="fas fa-edit"></i>
-                  </button>
-                  <button
-                    *ngIf="item.movilPol != undefined"
-                    (click)="buscarvehiculo(item.movilPol)"
-                    type="button"
-                    title="Ver vehículo"
-                    placement="top"
-                    show-delay="10"
-                    class="btn btn-danger btn-sm"
-                    data-toggle="modal"
-                    data-target="#modelId"
-                  >
-                    <i class="fas fa-car"></i>
-                  </button>
-                  <button
-                    type="button"
-                    title="Ver Historial del equipo"
-                    placement="top"
-                    show-delay="10"
-                    (click)="linkear(item.id)"
-                    class="btn btn-primary btn-sm"
-                    data-toggle="modal"
-                    data-target="#modelId"
-                  >
-                    <i class="fa fa-history"></i>
-                  </button>
-                  <button
-                    type="button"
-                    title="Reporte Impresión"
-                    placement="top"
-                    show-delay="10"
-                    (click)="linkearReporte(item.id)"
-                    class="btn btn-info btn-sm"
-                  >
-                    <i class="fa fa-print"></i>
-                  </button>
+                  <div class="row">
+                    <div class="col-md-6">
+                      <button
+                        type="button"
+                        title="Modificar"
+                        placement="top"
+                        show-delay="10"
+                        (click)="linkear(item.id)"
+                        class="btn btn-warning btn-sm"
+                      >
+                        <i class="fas fa-edit"></i>
+                      </button>
+                    </div>
+                    <div class="col-md-6">
+                      <button
+                        *ngIf="item.movilPol != undefined"
+                        (click)="buscarvehiculo(item.movilPol)"
+                        type="button"
+                        title="Ver vehículo"
+                        placement="top"
+                        show-delay="10"
+                        class="btn btn-danger btn-sm"
+                        data-toggle="modal"
+                        data-target="#modelId"
+                      >
+                        <i class="fas fa-car"></i>
+                      </button>
+                    </div>
+                  </div>
+                  &nbsp;
+                  <div class="row">
+                    <div class="col-md-6">
+                      <!-- (click)="linkear(item.id)" -->
+                      <button
+                        type="button"
+                        title="Ver Historial del equipo"
+                        placement="top"
+                        show-delay="10"
+                        class="btn btn-primary btn-sm"
+                        data-toggle="modal"
+                        data-target="#modelIdHistorial"
+                        (click)="listarHistorial(item.equipo.id)"
+                      >
+                        <i class="fa fa-history"></i>
+                      </button>
+                    </div>
+                    <div class="col-md-6">
+                      <button
+                        type="button"
+                        title="Reporte Impresión"
+                        placement="top"
+                        show-delay="10"
+                        (click)="linkearReporte(item.id)"
+                        class="btn btn-info btn-sm"
+                      >
+                        <i class="fa fa-print"></i>
+                      </button>
+                    </div>
+                  </div>
                 </td>
               </tr>
             </tbody>
@@ -116,6 +130,58 @@
             <span class="sr-only">Salir</span>
           </button>
           <strong>No hay datos</strong>
+        </div>
+      </div>
+    </div>
+
+    <!-- modal-historial del equipo -->
+    <!-- Modal -->
+    <div
+      class="modal fade"
+      id="modelIdHistorial"
+      tabindex="-1"
+      role="dialog"
+      aria-labelledby="modelTitleId"
+      aria-hidden="true"
+    >
+      <div class="modal-dialog modal-xl" role="document">
+        <div class="modal-content">
+          <div class="modal-header" *ngIf="historial.length>0">
+            <h5 id="modal-title" class="modal-title">Historial: &nbsp;&nbsp; <b>{{historial[0].equipo.modelo.marca.nombre}} - {{historial[0].equipo.modelo.nombre}} - {{historial[0]?.equipo?.nroSerie}}</b></h5>
+            <button
+              type="button"
+              class="close"
+              data-dismiss="modal"
+              aria-label="Close"
+            >
+              <span aria-hidden="true">&times;</span>
+            </button>
+          </div>
+          <div class="modal-body">
+            <table class="table">
+              <thead>
+                <tr>
+                  <th>Unidad</th>
+                  <th>Fecha Entrega</th>
+                </tr>
+              </thead>
+              <tbody>
+                <tr *ngFor="let item of historial">
+                  <td>{{item.unidad.nombre}}</td>
+                  <td>{{item.fechaEntrega | date:'dd/MM/yyyy'}}</td>
+                </tr>
+              </tbody>
+            </table>
+          </div>
+          <div class="modal-footer">
+            <button
+              type="button"
+              class="btn btn-primary"
+              data-dismiss="modal"
+            >
+              Salir
+            </button>
+          </div>
         </div>
       </div>
     </div>
@@ -144,13 +210,28 @@
             </button>
           </div>
           <div class="modal-body">
-          <label for=""> <b>Id Policial:</b>&nbsp;<span>{{vehiculo.identificacionPol | uppercase}}</span></label>
-          <br>
-          <label for=""> <b>Dominio:</b>&nbsp; <span>{{vehiculo.dominio | uppercase}}</span></label>
-          <br>
-          <label for=""> <b>Marca:</b>&nbsp;<span>{{vehiculo.modelo.marca.nombre | uppercase}}</span></label>
-          <br>
-          <label for=""> <b>Modelo:</b>&nbsp;<span>{{vehiculo.modelo.nombre | uppercase}}</span></label>
+            <label for="">
+              <b>Id Policial:</b>&nbsp;<span>{{
+                vehiculo.identificacionPol | uppercase
+              }}</span></label
+            >
+            <br />
+            <label for="">
+              <b>Dominio:</b>&nbsp;
+              <span>{{ vehiculo.dominio | uppercase }}</span></label
+            >
+            <br />
+            <label for="">
+              <b>Marca:</b>&nbsp;<span>{{
+                vehiculo.modelo.marca.nombre | uppercase
+              }}</span></label
+            >
+            <br />
+            <label for="">
+              <b>Modelo:</b>&nbsp;<span>{{
+                vehiculo.modelo.nombre | uppercase
+              }}</span></label
+            >
           </div>
         </div>
       </div>
