--- a/Deposito/src/app/pages/lst/lst-equipo/lst-equipo.component.html
+++ b/Deposito/src/app/pages/lst/lst-equipo/lst-equipo.component.html
@@ -17,7 +17,7 @@
         </app-fil-equipo>
   
         <div class="row table-responsive">
-            <table *ngIf="items.length > 0" class="table table-striped table-inverse text-center">
+            <table id="tabla" *ngIf="items.length > 0" class="table table-striped table-inverse text-center">
                 <thead class="table-light">
                     <tr>
                         <!-- <th>id</th> -->
@@ -32,7 +32,7 @@
                     </tr>
                 </thead>
                 <tbody>
-                    <tr class="{{item.situacion != 'Asignado'? 'table-success':'sin-color' }}" *ngFor="let item of items">
+                    <tr class="{{colores(item.estado.id)}}" *ngFor="let item of items">
                         <!-- <td scope="row">{{item.id}} </td> -->
                         <td>{{ item.tipoEquipo.nombre}}</td>
                         <td>{{ item.nroSerie }}</td>
@@ -77,7 +77,7 @@
   
   
   <!-- Modal -->
-  <div class="modal fade" id="modelId" tabindex="-1" role="dialog" aria-labelledby="modelTitleId" aria-hidden="true">
+  <!-- <div class="modal fade" id="modelId" tabindex="-1" role="dialog" aria-labelledby="modelTitleId" aria-hidden="true">
     <div class="modal-dialog" role="document">
         <div class="modal-content">
             <div class="modal-header">
@@ -91,5 +91,5 @@
             </div>
         </div>
     </div>
-  </div>
+  </div> -->
 </div>
