seguir con login

--- a/Deposito/src/app/pages/lst/lst-equipo/lst-equipo.component.scss
+++ b/Deposito/src/app/pages/lst/lst-equipo/lst-equipo.component.scss
@@ -15,8 +15,8 @@ b{
 
 
 //colores de th
-.table-light{
-    color: #E8FFFF;
+.t-light{
+    background-color: #E8FFFF;
 }
 
 .t-success{ //ASIGNADO
@@ -37,4 +37,7 @@ b{
 }
 .t-violeta{
     background-color: violet;
+}
+.t-default{
+    background-color: #FEF1E6;
 }
