--- a/Deposito/src/app/pages/lst/lst-equipo/lst-equipo.component.html
+++ b/Deposito/src/app/pages/lst/lst-equipo/lst-equipo.component.html
@@ -20,7 +20,6 @@
             <table id="tabla" *ngIf="items.length > 0" class="table table-striped table-inverse text-center">
                 <thead class="table-light">
                     <tr>
-                        <!-- <th>id</th> -->
                         <th>Tipo Equipo</th>
                         <th>Nro. serie</th>
                         <th>Marca</th>
@@ -33,14 +32,14 @@
                 </thead>
                 <tbody>
                     <tr class="{{colores(item.estado.id)}}" *ngFor="let item of items">
-                        <!-- <td scope="row">{{item.id}} </td> -->
+                        
                         <td>{{ item.tipoEquipo.nombre}}</td>
                         <td>{{ item.nroSerie }}</td>
                         <td>{{ item.modelo.marca.nombre | uppercase}}</td>
                         <td>{{ item.modelo.nombre | uppercase}}</td>
                         <td>{{ item.proveedor.nombre | uppercase}}</td>
                         <td>{{ item.estado.nombre }}</td>
-                        <td>{{ item.tipoAlta | uppercase}}</td>
+                        <td>{{ tipoAdquisicion(item.tipoAlta)|uppercase }}</td>
                         <td>
                             <button type="button" title="Modificar" placement="top" show-delay="10"
                                 (click)="linkear(item.id)" class="btn btn-secondary btn-sm">
