--- a/Deposito/src/app/pages/componentes/reportes/reportes.component.html
+++ b/Deposito/src/app/pages/componentes/reportes/reportes.component.html
@@ -9,7 +9,7 @@
             <label for="">
                <b>PROVINCIA DEL CHACO</b>
                <br>
-               <b>POLICIA</b> 
+               <b>POLICIA</b>
             </label>
         </div>
         <div class="col-md-4">
@@ -32,7 +32,7 @@
 <div id="padding" class="row">
     <div class="col-md-12 text-center">
        <h4><u>{{item.unidad.nombre | uppercase}}</u></h4>
-       <h4><u>RECIBO "{{item.equipo.tipoEquipo.nombre | uppercase}}"</u></h4>
+       <h4><u>RECIBO</u></h4>
        <hr>
     </div>
 </div>
