--- a/Deposito/src/app/pages/lst/lst-equipo/lst-equipo.component.html
+++ b/Deposito/src/app/pages/lst/lst-equipo/lst-equipo.component.html
@@ -31,14 +31,14 @@
                     </tr>
                 </thead>
                 <tbody>
-                    <tr class="{{colores(item.estado.id)}}" *ngFor="let item of items">
+                    <tr  *ngFor="let item of items">
                         
                         <td>{{ item.tipoEquipo.nombre}}</td>
                         <td>{{ item.nroSerie }}</td>
                         <td>{{ item.modelo.marca.nombre | uppercase}}</td>
                         <td>{{ item.modelo.nombre | uppercase}}</td>
                         <td>{{ item.proveedor.nombre | uppercase}}</td>
-                        <td>{{ item.estado.nombre }}</td>
+                        <td class="{{colores(item.estado.id)}}" ><em> <b style="font-size: 15px;">{{ item.estado.nombre }}</b></em></td>
                         <td>{{ tipoAdquisicion(item.tipoAlta)|uppercase }}</td>
                         <td>
                             <button type="button" title="Modificar" placement="top" show-delay="10"
